Fixes a word wrap issue for the luminous theme
git-svn-id: file:///home/svn/framework3/trunk@4802 4d416f70-5f16-0410-b530-b9f4589650da

--- a/data/msfweb/public/stylesheets/skins/luminous/luminous.css
+++ b/data/msfweb/public/stylesheets/skins/luminous/luminous.css
@@ -29,7 +29,7 @@ body>div#menuBar {
 }
 
 #menuBar {
-	width: 100px;
+	width: 125px;
 	background: url(images/menu-button-back.jpg) repeat-y;
 	overflow: hidden;
 }
